--- a/views/home.hbs
+++ b/views/home.hbs
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		{{> header}}
-		<p>{{scream_it welcome_msg}}</p>
+		<p class="post">{{scream_it welcome_msg}}</p>
 		
 		{{> footer}}
 	</body>
