--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,4 @@
-<footer>
-	<p>Created by Mik, Copyright {{get_current_year}}</p>
-</footer>
+	<footer>
+		<p>Created by Mik, Copyright {{get_current_year}}</p>
+	</footer>
+</div>
