--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,2 +1,77 @@
-<h2>{{page_title}}</h2>
-<span><a href="/">Home</a> <a href="/about">About</a></span>
+<style>
+	*{
+		margin: 0;
+		padding: 0;
+		font-family: sans-serif;
+	}
+	.container{
+		position: relative;
+		display: inline-block;
+		width: 640px;
+		height: auto;
+		left: 50%;
+		-webkit-transform: translateX(-50%);
+		-ms-transform: translateX(-50%);
+		-o-transform: translateX(-50%);
+		transform: translateX(-50%);
+	}
+	.header{
+		font-size: 21px;
+		line-height: 1.3;
+		font-weight: 600;
+		text-align: center;
+		padding: 20px;
+		border: 1px solid rgba(21,21,21,0.1);
+		background: rgba(0,0,0,0.67);
+		color: rgba(255,255,255,0.87);
+	}
+	.nav-menu{
+		position: relative;
+		display: inline-block;
+		float: left;
+		width: 640px;
+		height: auto;
+		text-align: center;
+		padding: 20px;
+		border-left: 1px solid rgba(21,21,21,0.1);
+		border-right: 1px solid rgba(21,21,21,0.1);
+		box-sizing: border-box;
+		background: rgba(0,0,0,0.1);
+	}
+	.nav-menu a{
+		font-size: 13px;
+		line-height: 16px;
+		padding: 5px;
+		text-decoration: none;
+		border-bottom: 1px solid rgba(255,0,0,0.2);
+		color: rgba(0,0,0,0.87);
+	}
+	.nav-menu a:hover{
+		border-color: rgba(255,0,0,0.5);
+	}
+
+	footer{
+		position: relative;
+		display: inline-block;
+		width: 100%;
+		height: auto;
+
+		padding: 20px;
+		text-align: center;
+		border: 1px solid rgba(21,21,21,0.1);
+		box-sizing: border-box;
+	}
+	.post{
+		position: relative;
+		display: inline-block;
+		width: 100%;
+		height: auto;
+
+		padding: 20px;
+		box-sizing: border-box;
+		text-align: center;
+	}
+</style>
+<div class="container">
+	<h2 class="header">{{page_title}}</h2>
+	<div class="nav-menu"><a href="/">Home</a> <a href="/about">About</a> <a href="/projects">Projects</a></div>
